--- a/doc/verslag/verslag-hovercraftuniverse.tex
+++ b/doc/verslag/verslag-hovercraftuniverse.tex
@@ -93,10 +93,14 @@ De bovenstaande klassen zitten vervat binnen het \texttt{CoreEngine}-project, da
 %	\caption{ZoidCom werking}
 %	\label{fig:zoidcom}
 %\end{figure}
-\todo{Server, client, netwerk, zoidcom, chatfunctionaliteit, replicatie, interpolatie, ....}
 
-\todo{Olivier!}
+De netwerkstructuur achter Hovercraft Universe is gebaseerd op het client-server model. De server is de instantie waar iedereen mee verbindt en deze maakt alle beslissingen in het spel. De server maakt deze beslissingen op basis van informatie die verkregen wordt via de clients. De clients verwerken de input van de gebruiker en sturen deze door naar de server. De server stuurt zijn beslissingen terug naar de clients die op hun beurt de wereld correct weergeven aan de gebruiker. Op deze manier wordt ervoor gezorgd dat clients geen game logic beslissingen kunnen maken.
 
+Het client-server model wordt gebruikt voor zowel multiplayer als singleplayer. Hovercraft Universe biedt twee mogelijkheden om een multiplayer spel te starten. De eerste mogelijkheid is een dedicated server starten zonder grafische output. Clients kunnen verbinden met de dedicated server door het IP-adres van deze server in te geven. De tweede mogelijk is om een client samen met een server te draaien. De server zal gestart worden wanneer een client een multiplayer game cre\"eert. Andere clients zien geen verschil tussen een dedicated server of een gewone server. Een singleplayer spel bestaat ook uit een server en een client in \'e\'en instantie van het spel. De client zal met \emph{localhost} verbinden en zo een singleplayer spel kunnen spelen.
+
+Het netwerk is gebaseerd op de ZoidCom netwerk library. Deze biedt de mogelijkheid voor replicatie van objecten en synchronisatie van de toestand van netwerk connecties via een high-level UDP protocol. Elke instantie in Hovercraft Universe is een object dat gerepliceerd wordt via het netwerk. Een voorbeeld hiervan is de hovercraft waarmee de speler racet. Dit object wordt aangemaakt op de server en deze laat dit weten aan de clients. De clients maken een \emph{proxy} object voor het hovercraft object. De server kan het hovercraft object aanpassen door de toestand ervan aan te passen. De netwerklaag zal controleren op updates en deze repliceren naar de proxy objecten bij de clients. De client die dit hovercraft object bestuurt, heeft de toestemming om events te sturen voor dit object die aangeven in welke richting de speler wilt bewegen. De netwerklaag zorgt dus voor het repliceren van objecten waardoor clients altijd de laatste toestand van deze objecten ontvangen.
+
+Hovercraft Universe biedt ook de mogelijkheid voor communicatie tussen de spelers. Bij het starten van een gewone of dedicated server wordt er ook aparte een chat server opgestart. Clients verbinden met deze chat server en kunnen in de lobby en tijdens het spel via deze server met elkaar chatten. De chat server werkt net zoals de objecten in het spel met replicatie om de clients op de hoogte te houden van de laatste berichten.
 
 \subsection{Modellen en user-data}
 De \textbf{modellen} zijn gedefinieerd in het (niet open) bestandsformaat van 3DS Max. Deze worden ge\"exporteerd naar het DotScene XML-formaat met behulp van de OgreMax Scene Exporter\footnote{\url{http://www.ogremax.com/}}. DotScene\footnote{\url{http://www.ogre3d.org/wiki/index.php/DotScene}} is een gestandaardiseerd XML-formaat dat informatie bevat over het soort entiteit, de grootte van het model, de gebruikte materialen en meshfiles, etc. Tevens bevat dit DotScene bestand informatie specifiek voor gebruik in HovercraftUniverse (snelheid, gewicht, \ldots). Een voorbeeld van deze user-data is gegeven in Listing~\ref{lst:sceneuserdata}.
