--- a/wiki/TODOs.wiki
+++ b/wiki/TODOs.wiki
@@ -2,10 +2,12 @@
 
 = Put all todo's here for the next release =
 
-  * Sterren visualizeren in nieuwe map!
+  * *DONE* Sterren visualizeren in nieuwe map!
   * Hovercraft select box
   * Logo en laadscherm ontwerpen
-  * Crash wanneer server could not be reached
-  * Reset gaat altijd naar 2e checkpoint
-  * Keys en camera nog altijd gemapt op oude entity als het spel stopt
+  * *WONTFIX* Crash wanneer server could not be reached
+  * *DONE* Reset gaat altijd naar 2e checkpoint
+  * *WONTFIX* Keys en camera nog altijd gemapt op oude entity als het spel stopt
   * Overlays kapot omdat de Camera raar doet
+  * Berekenen van positie bij Finishen (nu gebeurt dit op de laatste checkpoint, maar niet bij de finish)
+  * "Loading Some more text"
