--- a/doc/verslag/verslag-hovercraftuniverse.tex
+++ b/doc/verslag/verslag-hovercraftuniverse.tex
@@ -150,7 +150,7 @@ Ook worden hier een aantal visuele effecten aan toegevoegd. Ogre Particle System
 
 Schaduws en lichteffecten kunnen zoals voordien dynamisch aangepast worden. SkyX wordt gebruikt om dag- en nacht cycli te renderen en om wolken en sterrenhemels te tonen. Omdat het spel zich in de ruimte afspeelt wordt er enkel gerenderd tussen 22.00 en 5.00 uur. Beperkend aan SkyX is echter dat in de huidige vorm enkel hemels worden gerenderd en dus geen hele universe vol sterren. OgreMax\footnote{\url{http://www.ogremax.com/}} wordt gebruikt om modellen te exporteren vanuit 3DS Max en te importeren in Ogre.
 
-Hovercraft Universe ondersteunt vier verschillende camera's: een third-person view waarbij de hovercraft zelf zichtbaar en waarbij een groot deel van de wereld wordt getoond. First-person view geeft een beter snelheidsgevoel en verhoogt het inlevingsvermogen van de speler. Vervolgens is er een rear-view camera en een free-roaming camera om de omgeving te verkennen.
+Hovercraft Universe ondersteunt vijf verschillende camera's: een third-person view waarbij de hovercraft zelf zichtbaar en waarbij een groot deel van de wereld wordt getoond. First-person view geeft een beter snelheidsgevoel en verhoogt het inlevingsvermogen van de speler. Vervolgens is er een rear-view camera en een free-roaming camera om de omgeving te verkennen. Ten slotte bestaat er voor de liefhebbers een Super Mario Galaxy-achtige camera waarbij de up-vector invariabel blijft waardoor als de speler zich onderaan een planeet bevindt, de camera de speler ook effectief omgedraaid visualiseert.
 
 Material mapping wordt gedetailleerd uitgevoerd door middel van UVW-unwrapping. Niet alleen is dit erg flexibel om gecontroleerd materials te geven aan modellen, ook laat dit single-pass GPU pixel shading toe en vergemakkelijkt dit het proces voor LoD. 
 
